...
                                        <rect key="frame" x="20" y="354.5" width="335" height="200.5"/>
                                        <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaini
                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="descriptionGameDetail"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="vm1-Ae-MdE" firstAttribute="centerX" secondItem="C7j-xG-wh6" secondAttribute="centerX" id="Alm-QU-Ge3"/>
                                    <constraint firstItem="vOB-7K-JPR" firstAttribute="leading" secondItem="Mdb-HW-pfi" secondAttribute="leading" id="Qrh-1e-DW6"/>
...
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                                                                <color key="value" red="0.29730179909999999" green="0.84926223749999996" blue="0.39087057110000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </userDefinedRuntimeAttribute>
                                                        </userDefinedRuntimeAttributes>
                                                    </imageView>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Frete: R$ 12,90" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUj-Dg-qmI">
                                                        <rect key="frame" x="33" y="0.0" width="98.5" height="25"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="46" id="kbr-5V-SX4"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <inset key="imageEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                        <state key="normal" title="Adicionar ao Carrinho" image="icon-cart">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="addGameInShoppingCartButtonTapped:" destination="jfJ-6k-4p9" eventType="touchUpInside" id="3H6-dV-vla"/>
                                        </connections>
                                    </button>
...
                        <viewLayoutGuide key="safeArea" id="LhG-bf-PyH"/>
                    </view>
                    <navigationItem key="navigationItem" title="PS4" id="cgm-Qw-W6k">
                        <barButtonItem key="leftBarButtonItem" image="icon-close" id="kNk-0b-9Uu">
                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="closeButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="closeButtonTapped:" destination="jfJ-6k-4p9" id="rMx-J2-Xmw"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="icon-cart" id="Ch6-mQ-xdQ">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="cartButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="showShoppingCartButtonTapped:" destination="jfJ-6k-4p9" id="wEj-tJ-p4F"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="MbS-Yb-0cQ">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="navigationGameDetails"/>
                        </userDefinedRuntimeAttributes>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="jfJ-6k-4p9" kind="relationship" relationship="rootViewController" id="mem-vL-53G"/>
                    </connections>
...
