...
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="46" id="Crc-9g-DpX"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <inset key="imageEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                                <state key="normal" title="FINALIZAR COMPRA">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="finalizePurchaseButtonTapped:" destination="lGD-t5-Lo4" eventType="touchUpInside" id="344-Xd-ENy"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cda-S3-Y2x">
                                                <rect key="frame" x="10" y="75" width="394" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="8ro-WZ-JTs"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                <state key="normal" title="Continuar comprando"/>
                                                <connections>
                                                    <action selector="continueBuyingButtonTapped:" destination="lGD-t5-Lo4" eventType="touchUpInside" id="gWe-BH-R5v"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <constraint firstItem="ppJ-Eu-Ukm" firstAttribute="top" secondItem="Ikg-QW-PDP" secondAttribute="top" id="ilN-E5-JK3"/>
                            <constraint firstItem="ppJ-Eu-Ukm" firstAttribute="leading" secondItem="Ikg-QW-PDP" secondAttribute="leading" id="y9N-D3-eMH"/>
                            <constraint firstItem="0V2-Hu-bfD" firstAttribute="leading" secondItem="Ikg-QW-PDP" secondAttribute="leading" constant="20" id="yah-Q6-Ldm"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Ikg-QW-PDP"/>
                    </view>
                    <navigationItem key="navigationItem" title="Carrinho de Compras" id="E2G-m7-SqE">
                        <barButtonItem key="leftBarButtonItem" image="icon-close" id="ank-q5-5zV">
                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="closeButtonTapped:" destination="lGD-t5-Lo4" id="tPo-iG-iWF"/>
                            </connections>
                        </barButtonItem>
...
