...

    override func collectionView(_ collectionView: UICollectionView,
                                 cellForItemAt indexPath: IndexPath) -> UICollectionViewCell {
        let game = searchResults[indexPath.item]
        let cell = collectionView.dequeueReusableCell(withReuseIdentifier: reuseIdentifier, for: indexPath)

        guard let gameCell = cell as? GameCollectionViewCell else {
            preconditionFailure("The cell is supposed to be a GameCollectionViewCell.")
        }

        if let URL = URL(string: game.imagePath) {
            gameCell.gameImageView.kf.setImage(with: URL)
        }
...
