...
            guard items.count == 0 else { return }
            view?.showMessage(
                icon: .logo, text: "O seu carrinho está vazio.\nTe esperamos com muitos produtos!",
                sizeIcon: 100,
                backgroundColor: .white,
                isButton: true,
                titleButton: "BORA COMPRAR?",
                completion: { [weak self] in
                self?.dismiss()
            })
        }
    }
    var subTotal: Double = 0.0
...
